Updating link to Peritus page; cosmetic styling change in Peritus page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div href="http://hnefatafl.pl/peritus" target="_blank" class="section-container__block section-container__block--project">
           Responsywna strona-wizytówka dla biura tłumaczeń</br><small>(HTML5, CSS, Bootstrap)</small>
           <div class="project__links">
-            <a class="project__link" href="http://hnefatafl.pl/peritus" target="_blank">Zobacz</a> |
+            <a class="project__link" href="https://codesquirrelpl.github.io/peritus" target="_blank">Zobacz</a> |
             <a class="project__link" href="https://github.com/CodeSquirrelPL/peritus" target="_blank">GitHub</a>
           </div>
         </div>
