correcting repository adress

--- a/coderscamp/index.html
+++ b/coderscamp/index.html
@@ -70,9 +70,9 @@
           </div></div>
         </div>
         <div href="" class="section-container__block section-container__block--project">
-          Minimalistyczne portfolio - strona, którą przeglądasz</br><small>(HTML5, CSS)</small>
+          Portfolio - strona, którą przeglądasz</br><small>(HTML5, CSS)</small>
           <div class="project__links">
-            <a href="https://github.com/CodeSquirrelPL/codesquirrelpl.github.io" target="_blank" class="project__link">GitHub</a>
+            <a href="https://github.com/CodeSquirrelPL/coders-camp-1" target="_blank" class="project__link">GitHub</a>
           </div>
         </div>
       </div>
