--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio - Paulina Filipiak</title>
+    <title>Portfolio - Nikita Filipiak</title>
     <link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Livvic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" type="text/css" />
   </head>
@@ -12,7 +12,7 @@
     <nav>
       <a href="#skills" class='nav__button'>umiejętności</a> |
       <a href="#projekty" class='nav__button'>projekty</a> |
-      <a href="https://linkedin.com/in/paulina-filipiak" target="_blank"  class='nav__button'>linkedin</a> |
+      <a href="https://linkedin.com/in/nikita-filipiak" target="_blank"  class='nav__button'>linkedin</a> |
       <a href="https://github.com/CodeSquirrelPL" target="_blank" class='nav__button'>github</a>
     </nav>
     <section id="skills">
@@ -77,6 +77,6 @@
       </div>
     </section>
 
-    <footer>© Copyright 2019 Paulina Filipiak</footer>
+    <footer>© Copyright 2019-2021 Nikita Filipiak</footer>
   </body>
 </html>
