--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css" type="text/css" />
   </head>
   <body>
-    <header><h1>Paulina Filipiak <span class="header__title"> | Junior Front-End Developer</span></h1></header>
+    <header><h1>Nikita Filipiak <span class="header__title"> | Junior Front-End Developer</span></h1></header>
     <nav>
       <a href="#skills" class='nav__button'>umiejętności</a> |
       <a href="#projekty" class='nav__button'>projekty</a> |
