--- a/peritus/index.html
+++ b/peritus/index.html
@@ -9,7 +9,7 @@
 
      <meta name="description" content="Tłumacz przysięgły, niemiecki, angielski">
      <meta name="keywords" content="tłumacz, tłumacz przysięgły, niemiecki, angielski, tłumacz niemiecki, tłumacz angielski, polish translator">
-     <meta name="author" content="Paulina Filipiak">
+     <meta name="author" content="Nikita Filipiak">
 
      <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
      <link rel="stylesheet" href="style.css">
@@ -96,7 +96,7 @@
 <p><a href="mailto:konrad.nb.nowak@gmail.com">konrad.nb.nowak@gmail.com</a></p>
   </section>
 
-  <footer>© Copyright 2019 Paulina Filipiak</footer>
+  <footer>© Copyright 2019 Nikita Filipiak</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
