Fixed a word left in Polish, improved wording

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       </div>
       <div class="section-container skills">
         <div class="section-container__block--skills">
-        <h4>I've worked with:</h4>
+        <h4>I've also worked with:</h4>
         <ul>
           <li>jQuery</li>
           <li>AJAX</li>
           <li>Bootstrap</li>
           <li>C++</li>
-          <li>Zasady SEO</li>
+          <li>SEO</li>
           <li>WCAG 2.0</li>
         </ul>
       </div>
